--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
   </ul>
 
   <p>Ein Link zu <a href="https://www.w3schools.com">w3schools</a>.</p>
+  
+  <h2>Eine geordnete Liste</h2>
+  
+  <ol>
+    <li>Punkt 1</li>
+    <li>Punkt 2</li>
+    <li>Punkt 3</li>
+  </ol>
+  
+  
 
 </body>
 </html>
