--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Index Test</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="styleheet" type="text/css" href="style.css">
+<link rel="styleheet" type="text/css" href="/style.css">
 </head>
 <body>
 
