--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <dic class="topnav" id="myTopnav">
+  <div class="topnav" id="myTopnav">
     <a href="index.html" class="active">Home</a>
     <a href="#news">News</a>
     <a href="#About">About</a>
